# SOM_package

./: .gitignore  README.md  __init__.py  modules.rst  noxfile.py  pyproject.toml  readthedocs.yaml  setup.py
.ipynb_checkpoints/: README-checkpoint.md  __init__-checkpoint.py
Data_to_NeuroScope_format/: Khoros_functions.py
Data_to_NeuroScope_format/.ipynb_checkpoints/: SOM_functions-checkpoint.py
Plotting/: SOM_plots.py
SOM_learn/: train.py
SOM_package.egg-info/: PKG-INFO
SOM_recall/: SOM_functions.py  __init.__py  recall.py  strax_functions.py
_build/html/: .buildinfo  genindex.html  search.html
docs/: conf.py  index.rst  sciSOM.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  noxfile.doctree  sciSOM.doctree  (+3 more)
docs/notebooks/: Kohonen_SOM.ipynb  concious_SOM_example.ipynb
docs/tutorials/: first-steps.md  installation.md
examples/: Kohonen_SOM.ipynb  Untitled.ipynb  concious_SOM_example.ipynb  kSOM_example.ipynb
examples/.ipynb_checkpoints/: Kohonen_SOM-checkpoint.ipynb  Untitled-checkpoint.ipynb  kSOM_example-checkpoint.ipynb
sciSOM/: __init__.py
sciSOM/Plotting/: SOM_plots.py  __init__.py  nueroscope_plots.py
sciSOM/SOM_learn/: train.py
sciSOM/SOM_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sciSOM/SOM_recall/: __init__.py  recall.py  strax_functions.py
sciSOM/SOM_remap/: GUI_tests.py  README.md  Remap.ipynb  SOM_draw_cluster.py  requierments.txt  try_interactive_plots.ipynb
sciSOM/web_interface/: assign_clusters.py  panel_test.py
tests/: test_learn_functions.py  test_recall_functions.py
(+29 files in other folders)
