[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciSOM"
version = "0.1.0"
decription = "SOM software for scientists"
dependencies = [
    'viffIO>=0.0.1',
    'numpy>=2.0.1',
    'pandas>=2.2.2',
    'strax>=1.5.2',
    'matplotlib>=3.7.1',
    'pytest>=8.3.0',
    'hypothesis>=6.100.0'
]

[project.optional-dependencies]
docs = [
  "furo",
  "myst_parser >=0.13",
  "sphinx >=4.0",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
  "nbsphinx"
]
