[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciSOM"
version = "0.2.0"
decription = "SOM software for scientists"
dependencies = [
    'viffIO>=0.0.1',
    'numba',
    'numpy',
    'pandas',
    'matplotlib',
    'pytest',
    'hypothesis',
    'panel'
]

[project.optional-dependencies]
docs = [
  "furo",
  "myst_parser >=0.13",
  "sphinx >=4.0",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
  "nbsphinx",
  "llvmlite>=0.37.0",
  "ipykernel",
]
